[package]
name = "tflite-nm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libc = "0.2"
postcard = { version = "0.7.2", features = [ "alloc", "use-std" ] }
serde = { version = "1.0.115", features = ["derive"] }
tflite = "0.9.6"
